# machado

./: .coverage  .gitignore  CONTRIB.rst  README.md  cov.txt  pyproject.toml  setup.py  test_output.txt
.github/workflows/: django.yml
docs/: 01-installation.md  02-data-loaders.md  02-data-loading.md  03-load-ontologies.md  04-load-taxonomy.md  04-search-indexing.md  05-insert-organism.md  06-load-publication.md  07-load-fasta.md  08-load-gff.md  09-load-feature-annotation.md  10-load-blast.md  11-load-interproscan.md  12-load-orthomcl.md  13-load-rnaseq.md  14-load-coexpression.md  15-load-vcf.md  16-visualization.md  17-index-search.md  18-webserver.md  19-jbrowse.md  20-cache.md  21-diagrams.md  22-models.md  INSTRUCTIONS.md  index.md
docs/html/: index_search.html  installation.html  searchindex.js
docs/techstack/: 01-database-models.md  03-rest-api.md  04-search-indexing.md  05-web-interface.md  06-testing-cicd-deployment.md  INSTRUCTIONS.md
machado/: decorators.py  forms.py  models.py  search_indexes.py  urls.py
machado/account/: serializers.py  urls.py  views.py
machado/api/: urls.py
machado/loaders/: analysis.py  assay.py  biomaterial.py  common.py  exceptions.py  feature.py  featureattributes.py  ontology.py  organism.py  phylotree.py  project.py  publication.py  sequence.py  similarity.py  treatment.py
machado/migrations/: 0001_initial.py  0002_add_index.py  0003_add_multispecies.py  0004_create_history.py  0005_add_db_url.py  0006_featuresearchindex.py
machado/project_template/: manage.py
machado/scripts/: startproject.py
machado/templates/: base.html  congrats.html  feature.html  index.html  search_form.html  search_result.html  search_result.out
machado/tests/: settings.py  test_account_serializers.py  (+29 more)
(+52 files in other folders)
